--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
+    <!-- WebView -->
     <WebView
         android:id="@+id/webView"
         android:layout_width="0dp"
@@ -15,5 +16,69 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <!-- Filtre Butonu -->
+    <ImageButton
+        android:id="@+id/filterButton"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:onClick="btnFilterClicked"
+        android:src="@drawable/left_arrow"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- Filtre Paneli -->
+    <LinearLayout
+        android:id="@+id/filterPanel"
+        android:layout_width="300dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:elevation="8dp"
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Filtre İçeriği -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Filtre Seçenekleri"
+            android:padding="16dp"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
+        
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="16dp"
+            android:onClick="sideBarBtnClicked"
+            android:text="Temizle"
+            android:id="@+id/sideBarDeleteBtn"/>
+        
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="40dp"
+            android:id="@+id/spinnerPlantOrHoney"
+            android:layout_marginTop="5dp"
+            android:visibility="invisible"/>
+
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="5dp"
+            android:id="@+id/spinnerSearchType"
+            android:visibility="invisible"/>
+
+            
+
+       
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
